syntax = "proto3";
package axelar.evm.v1beta1;

option go_package = "github.com/axelarnetwork/axelar-core/x/evm/types";

import "gogoproto/gogo.proto";
import "axelar/vote/exported/v1beta1/types.proto";
import "axelar/tss/exported/v1beta1/types.proto";
import "axelar/evm/v1beta1/types.proto";
import "axelar/permission/exported/v1beta1/types.proto";

option (gogoproto.goproto_getters_all) = false;

message SetGatewayRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_ACCESS_CONTROL;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  bytes address = 3
      [ (gogoproto.nullable) = false, (gogoproto.customtype) = "Address" ];
}

message SetGatewayResponse {}

message ConfirmGatewayTxRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  bytes tx_id = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "Hash",
    (gogoproto.customname) = "TxID"
  ];
}

message ConfirmGatewayTxResponse {}

// MsgConfirmDeposit represents an erc20 deposit confirmation message
message ConfirmDepositRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  bytes tx_id = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "Hash",
    (gogoproto.customname) = "TxID"
  ];
  bytes amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false,
    deprecated = true
  ];
  bytes burner_address = 5
      [ (gogoproto.nullable) = false, (gogoproto.customtype) = "Address" ];
}

message ConfirmDepositResponse {}

// MsgConfirmToken represents a token deploy confirmation message
message ConfirmTokenRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  bytes tx_id = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "Hash",
    (gogoproto.customname) = "TxID"
  ];
  Asset asset = 4 [ (gogoproto.nullable) = false ];
}

message ConfirmTokenResponse {}

message ConfirmTransferKeyRequest {
  reserved 4, 5; // transfer_type and key_id were deleted in v0.20

  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  bytes tx_id = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.customtype) = "Hash",
    (gogoproto.customname) = "TxID"
  ];
}

message ConfirmTransferKeyResponse {}

// MsgLink represents the message that links a cross chain address to a burner
// address
message LinkRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string recipient_addr = 3;
  string asset = 4;
  string recipient_chain = 5
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
}

message LinkResponse { string deposit_addr = 1; }

// CreateBurnTokensRequest represents the message to create commands to burn
// tokens with AxelarGateway
message CreateBurnTokensRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
}

message CreateBurnTokensResponse {}

// CreateDeployTokenRequest represents the message to create a deploy token
// command for AxelarGateway
message CreateDeployTokenRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  Asset asset = 3 [ (gogoproto.nullable) = false ];
  TokenDetails token_details = 4 [ (gogoproto.nullable) = false ];
  reserved 5; // min_amount was removed in v0.15
  bytes address = 6
      [ (gogoproto.nullable) = false, (gogoproto.customtype) = "Address" ];
  string daily_mint_limit = 7;
}

message CreateDeployTokenResponse {}

// CreatePendingTransfersRequest represents a message to trigger the creation of
// commands handling all pending transfers
message CreatePendingTransfersRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
}

message CreatePendingTransfersResponse {}

message CreateTransferOwnershipRequest {
  option deprecated = true;
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string key_id = 3 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

message CreateTransferOwnershipResponse { option deprecated = true; }

message CreateTransferOperatorshipRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_CHAIN_MANAGEMENT;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string key_id = 3 [
    (gogoproto.customname) = "KeyID",
    (gogoproto.casttype) =
        "github.com/axelarnetwork/axelar-core/x/multisig/exported.KeyID"
  ];
}

message CreateTransferOperatorshipResponse {}

message SignCommandsRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
}

message SignCommandsResponse {
  bytes batched_commands_id = 1
      [ (gogoproto.customname) = "BatchedCommandsID" ];
  uint32 command_count = 2;
}

message AddChainRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_ACCESS_CONTROL;
  reserved 3; // native_asset was removed in v0.14

  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string name = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  tss.exported.v1beta1.KeyType key_type = 4 [ deprecated = true ];
  bytes params = 5
      [ (gogoproto.nullable) = false, (gogoproto.customtype) = "Params" ];
}

message AddChainResponse {}

message RetryFailedEventRequest {
  option (permission.exported.v1beta1.permission_role) = ROLE_UNRESTRICTED;
  bytes sender = 1 [ (gogoproto.casttype) =
                         "github.com/cosmos/cosmos-sdk/types.AccAddress" ];
  string chain = 2
      [ (gogoproto.casttype) =
            "github.com/axelarnetwork/axelar-core/x/nexus/exported.ChainName" ];
  string event_id = 3
      [ (gogoproto.customname) = "EventID", (gogoproto.casttype) = "EventID" ];
}

message RetryFailedEventResponse {}
